# python_magnetgeo

./: README.md  archive.sh  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
debian/: changelog  control
debian/patches/: series  typing-python-3.11.patch
python_magnetgeo/: Bitter.py  Bitters.py  Helix.py  InnerCurrentLead.py  Insert.py  MSite.py  Model3D.py  ModelAxi.py  OuterCurrentLead.py  Ring.py  Screen.py  Shape.py  Shape2D.py  Supra.py  SupraStructure.py  Supras.py  __init__.py  coolingslit.py  deserialize.py  tierod.py
